Adicionado opção de limpar lista

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <ul id="listaAmigos"></ul>
         <!-- Botão para sortear -->
         <button id="btnSortear" class="btn-sortear">Sortear Amigo</button>
+        <!-- Botão para limpar lista -->
+        <button id="btnLimpar" class="btn-limpar">Limpar Lista</button>
         <!-- Resultado -->
         <p id="resultado"></p>
     </div>
